[tool.poetry]
name = "beatporter"
version = "0.1.0"
description = "Scrape Beatport charts and add songs to Spotify playlists"
authors = ["rootshellz <rootshellz@rootshellz.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.17.1"
beautifulsoup4 = "^4.9.3"
selenium = "^4.24.0"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
